--- a/client/webserver/site/src/css/market_dark.scss
+++ b/client/webserver/site/src/css/market_dark.scss
@@ -87,8 +87,6 @@ body.dark {
     }
 
     #orderForm {
-      color: #a1a1a1;
-
       button {
         color: #aaa;
       }
@@ -137,7 +135,7 @@ body.dark {
       }
 
       .order-opt.selected {
-        background-color: #222e38;
+        background-color: #fff1;
       }
     }
 
