--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -378,6 +378,13 @@
                   <div class="text-end">
                     <button id="submitBttn" type="button" class="my-1 fs14 submit text-center buygreen-bg" disabled></button> {{/* textContent set by script */}}
                   </div>
+
+                  {{- /* ORDER LIMITS */ -}}
+                  <div class="mt-2 p-2 text-center brdr fs17">
+                    [[[order_form_remaining_limit]]]
+                  </div>
+
+
                 </div>
                 <div class="fs15 pt-3 text-center d-hide errcolor text-break" id="orderErr"></div>
               </form>
@@ -412,6 +419,55 @@
                     <div data-tmpl="bal" class="flex-center"></div>
                   </div>
                 </div>
+              </div>
+
+              {{- /* REPUTATION */ -}}
+              <div id="tradingLimits" class="d-flex align-items-stretch fs15 mx-2 brdr">
+                <div class="d-flex flex-column flex-grow-1 align-items-stretch px-2">
+
+                  <div class="d-flex justify-content-between align-items-center">
+                    <span>[[[Parcel Size]]]</span>
+                    <span>
+                      <span id="parcelSizeLots"></span> <span>[[[lots]]]</span>
+                    </span>
+                  </div>
+
+                  <div class="d-flex justify-content-between align-items-center">
+                    <span><!-- Parcel Size Base --></span>
+                    <span>
+                      <span id="marketLimitBase"></span> <span id="marketLimitBaseUnit"></span>
+                    </span>
+                  </div>
+
+                  <div class="d-flex justify-content-between align-items-center">
+                    <span><!-- Parcel Size Quote --></span>
+                    <span>
+                      ~<span id="marketLimitQuote"></span> <span id="marketLimitQuoteUnit"></span>
+                    </span>
+                  </div>
+
+                </div>
+                <div class="d-flex flex-column flex-grow-1 align-items-stretch px-2 brdrleft">
+
+                  <div class="d-flex justify-content-between align-items-center">
+                    <span>[[[Trading Tier]]]</span>
+                    <span id="tradingTier"></span>
+                  </div>
+
+                  <div class="d-flex justify-content-between align-items-center">
+                    <span>[[[Trading Limit]]]</span>
+                    <span><span id="tradingLimit"></span> lots</span>
+                  </div>
+
+                  <div class="d-flex justify-content-between align-items-center">
+                    <span>[[[Current Usage]]]</span>
+                    <span><span id="limitUsage"></span>%</span>
+                  </div>
+                  
+                </div>
+              </div>
+              <div id="reputationMeter" class="px-2 mt-2 brdrbottom">
+                {{template "reputationMeter"}}
               </div>
 
               {{- /* USER ORDERS */ -}}
