--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -304,6 +304,10 @@
     #walletDetailsBox {
       border-bottom: none;
     }
+
+    #mixerConfigForm {
+      min-width: 325px;
+    }
   }
 
   .flex-wrap-lg {
