--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -6,7 +6,7 @@
       <div class="flex-center flex-column p-3">
         <div class="fs28 text-nowrap">[[[Market Making]]]</div>
         <div class="flex-center mt-1 fs20">
-          <span id="onIndicator" class="off me-2"></span>
+          <span id="onIndicator" class="on-indicator off me-2"></span>
           <span id="onMsg" class="d-hide">[[[Running]]]</span>
           <span id="offMsg">[[[Off]]]</span>
         </div>
