--- a/client/webserver/site/src/css/main_dark.scss
+++ b/client/webserver/site/src/css/main_dark.scss
@@ -18,6 +18,10 @@ body.dark {
     color: #777;
   }
 
+  .errcolor {
+    color: #fa7664;
+  }
+
   div.mainlinks > div,
   div.mainlinks > a {
     color: #a8a8a8;
@@ -167,5 +171,9 @@ body.dark {
       background-color: $dark_panel;
       box-shadow: 0 3px 6px #00000029, 0 2px 10px #00000049;
     }
+  }
+
+  .bodybg {
+    background-color: $dark_body_bg;
   }
 }
